@@ -1,6 +1,9 @@
 0.04 2022-09-16
   [Test Improvement]
     * Add many tests.
+  [Bug Fix]
+    * Fix the bug that the l method in the Sys::FileTest class doesn't work well.
+    
 0.03 2022-09-15
   [New Features]
     * Add the getcwd method to the Sys::IO class.
